# mzi

./: .gitignore  pyproject.toml
lab1/: main.py
lab2/: main.py
lab3/: main.py
lab4/: main.py
lab5/: hash_lab.py  streebog.py
lab6/: main.py
lab7/: elgamal_elliptic_curve.py
lab8/: Dockerfile  jpeg_steganography.py  useful_commands.md
